# social-norms-trees-prototype

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  publish.yml  test.yml
examples/: README.md  atlas-resource-file.json  digit-resource-file.json  optimus-resource-file.json
social_norms_trees/: atomic_mutations.py  behavior_tree_library.py  interactive_ui.py  ui_wrapper.py
